# vhrn

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  claude-box.sh  entrypoint.sh  vhrn.sh
.github/workflows/: _build-binaries.yml  _build-images.yml  _test.yml  ci.yml  harness-images.yml  nightly.yml  pages.yml  pr-images-cleanup.yml  publish-images.yml  release.yml
docs/: RELEASING.md  adding-a-harness.md  sandbox-design.md
docs/plans/: per-project-config.md
docs/runbooks/: release.md
image/: Dockerfile  Makefile  entrypoint.sh
image/base/: Dockerfile  entrypoint.sh
image/claude/: Dockerfile
internal/vhrn/: run.go  run_test.go  sandbox.go  state.go  state_test.go
pages/: index.html  install.sh
proxy/: .gitignore  Dockerfile  Makefile  go.mod  main.go
proxy/egress/: denylog.go  doc.go  policy_test.go  proxy.go
scripts/: install.sh
src/: cli.rs  config.rs  env.rs  harness.rs  image.rs  lib.rs  logging.rs  main.rs  net.rs  persist.rs  run.rs  shell.rs  testutil.rs
