[package]
name = "vhrn"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# cargo_common_metadata wants crates.io publishing fields (license/keywords/
# categories); vhrn ships as a GitHub-release binary, not a published crate, so it is
# allowed rather than populated. Both groups sit below the override's priority, else
# Cargo's lint_groups_priority rejects the same-priority group + member.
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"

[dependencies]
anyhow = "1.0.104"
hex = "0.4.3"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.151", features = ["arbitrary_precision"] }
sha2 = "0.11.0"
signal-hook = "0.4.4"
toml = "1.1.3"
